# Opencv-Learning

./: .gitignore  1.计算机中图像的存在形式  LICENSE  README.md  io_image.py  io_video.py  io_wecam.py
C++_Version/: CMakeLists.txt  main.cpp
ICBK算法组第三周周训项目/: 装甲板.py  装甲板改良2.0.py  装甲板视频流.py  问题汇总
ICBK算法组第三周周训项目/Week 3/: CMakeLists.txt  IO.cpp  main.cpp  no1.h
ICBK算法组第二周周训项目/: 色彩检测.txt  识别颜色.py
ICBK算法组第五周周训项目/: HSV加二值化装甲板识别.py
ICBK算法组第五周周训项目/参考焚决/: 焚决.py
ICBK算法组第十二周周训项目/: kalmanfilter.py  mian.py  mian_video.py
ICBK算法组第四周周训项目/: HSVfinding.py  装甲板改良2.0.py  装甲板改良3.0.py  装甲板视频流改良1.0.py
Lesson 1/: io_image.py  io_video.py  io_wecam.py
Lesson 2/: crop.py  resizing.py  图像操作
Lesson 3/: Colar space.py
Lesson 4/: GaussianBlur.py  blur.py  图像模糊处理
Lesson 5/: Threshold.py  adaptive_threshold.py  图像阈值处理
Lesson 6/: Edge detection.py  形态学变化  边缘检测
Lesson 7/: drawing.py
Lessson  3/: 色彩空间
第十三周周训项目/: train.py
